--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,9 +12,9 @@
 // $gray-300:  #c4c9d0 !default;
 // $gray-400:  #b1b7c1 !default;
 // $gray-500:  #9da5b1 !default;
-// $gray-600:  #8a93a2 !default;
+$gray-600:  #8a93a2 !default;
 // $gray-700:  #768192 !default;
-// $gray-800:  #636f83 !default;
+$gray-800:  #636f83 !default;
 // $gray-900:  #4f5d73 !default;
 // $black:     #000015 !default;
 // scss-docs-end gray-color-variables
@@ -47,7 +47,7 @@
 // $blue:    #0d6efd !default;
 // $indigo:  #6610f2 !default;
 // $purple:  #6f42c1 !default;
-// $pink:    #d63384 !default;
+$pink:    #d63384 !default;
 // $red:     #dc3545 !default;
 // $orange:  #fd7e14 !default;
 // $yellow:  #ffc107 !default;
@@ -57,7 +57,7 @@
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
-// $colors: (
+$colors: (
 //   "blue":       $blue,
 //   "indigo":     $indigo,
 //   "purple":     $purple,
@@ -69,9 +69,9 @@
 //   "teal":       $teal,
 //   "cyan":       $cyan,
 //   "white":      $white,
-//   "gray":       $gray-600,
-//   "gray-dark":  $gray-800
-// ) !default;
+  "gray":       $gray-600,
+  "gray-dark":  $gray-800
+) !default;
 // scss-docs-end colors-map
 
 // fusv-disable
